# CipherBound

./: .gitattributes  .gitignore  Doxyfile  LICENSE  README.md  build_web.sh  clang_format.sh  generate_docs.sh  make_map.py  make_spritesheet.py  map_editor.py  meson.build  meson_options.txt  pyproject.toml  shell.html  story_future_notes.md  story_post_first_faculty.md
.github/workflows/: ci.yml  deploy.yml  docs-pages.yml
assets/data/: items.txt  moves.txt  species.txt
assets/data/cutscenes/: academy_archive.cutscene  applied_physics_aftermath.cutscene  bart_concordance_reveal.cutscene  bart_iver_intro.cutscene  bart_resonance_followup.cutscene  example.cutscene  first_faculty_aftermath.cutscene  natural_sciences_lockdown.cutscene  oak_intro.cutscene  pewter_arrival.cutscene  resonance_lab_reveal.cutscene  rival_intercept.cutscene
assets/data/dialogue/: README.md  tv_broadcast.npcdialogue
assets/data/maps/: bart_iver_lab.map  house1_1f.map  house1_2f.map  house2_1f.map  oak_lab.map  pallet_town.map  route_1.map
cross/: emscripten.ini
docs/: Doxyfile
docs/doxygen/: architecture.dox  battle_turn_flow.dox  cutscene_authoring.dox  data_formats.dox  layout.xml  mainpage.md  map_authoring.dox  mode_switching.dox  modules.dox  save_compatibility.dox
docs/story/: story_aureate_applied_physics.md  story_current_game.md  story_outline.md
scripts/: build_web.sh  clang_format.sh  generate_docs.sh  optimize_music_assets.sh  optimize_png_assets.sh  optimize_sfx_assets.sh
src/: main.cpp
src/app/: GameMode.cpp  GameMode.h  Session.cpp  Session.h  SessionCoordinator.cpp  SessionCoordinator.h
src/app/modes/: BagMode.cpp  BagMode.h  BattleIntroMode.cpp  BattleMode.h  CutSceneMode.cpp  CutSceneMode.h  DaemonNamingMode.cpp  DaemonNamingMode.h  DaemondexMode.cpp  DaemondexMode.h  DialogueChoiceMode.cpp  DialogueChoiceMode.h  DialogueMode.cpp  DialogueMode.h  MenuMode.cpp  MenuMode.h  NameEntryPanel.cpp  NameEntryPanel.h  OverworldMode.cpp  OverworldMode.h  PCBoxMode.cpp  PCBoxMode.h  PartyMode.cpp  PartyMode.h  PlayerStatsMode.cpp  PlayerStatsMode.h  SaveMode.h  ShopMode.cpp  ShopMode.h  TitleScreenMode.cpp  TitleScreenMode.h  TransitionMode.cpp  TransitionMode.h
src/audio/: MusicManager.cpp  MusicManager.h  SoundEffects.h  SoundManager.cpp  SoundManager.h
src/battle/: Battle.cpp  Battle.h  BattleAI.cpp  BattleAI.h  BattleCapture.cpp  BattleCapture.h  BattleEventQueue.cpp  BattleEventQueue.h  BattleRules.cpp  BattleRules.h  BattleTurnResolver.cpp  BattleTurnResolver.h  BattleTypes.h  TrainerApproachCutscene.cpp  TrainerApproachCutscene.h  TypeChart.cpp  TypeChart.h
src/battle/mode/: BattleIntroMode.cpp  BattleIntroMode.h  BattleMode.h  CaptureAnimation.cpp  Render.cpp  Update.cpp
src/battle/ui/: BattleAnimationUtils.h  BattlePresentationState.cpp  BattlePresentationState.h  BattleRenderer.cpp  BattleRenderer.h
src/common/: StringUtils.h
src/core/: CutsceneFormat.cpp  CutsceneFormat.h  CutsceneLoader.cpp  CutsceneLoader.h  CutsceneRunner.cpp  CutsceneRunner.h  CutsceneWorldOps.h  FilePaths.cpp  FilePaths.h  GameMode.cpp  GameMode.h  Session.cpp  Session.h  SessionCoordinator.cpp  SessionCoordinator.h  StoryManager.cpp  StoryManager.h  StringUtils.h  TextParse.h  VariantUtils.h
src/core/modes/: BagMode.cpp  BagMode.h  BattleIntroMode.cpp  BattleIntroMode.h  BattleMode.cpp  BattleMode.h  CutSceneMode.cpp  (+21 more)
src/cutscene/: CutsceneFormat.cpp  CutsceneFormat.h  CutsceneLoader.cpp  CutsceneLoader.h  CutscenePlayback.cpp  CutscenePlayback.h  CutsceneRunner.cpp  CutsceneRunner.h  CutsceneWorldOps.cpp  CutsceneWorldOps.h
src/data/: Cutscene.h  Item.h  Move.h  Pokedex.cpp  Pokedex.h  Species.h
src/game_data/: Cutscene.h  Pokedex.cpp  Pokedex.h  Species.h
src/save/: SaveFormat.cpp  SaveFormat.h  SaveManager.cpp  SaveManager.h
src/state/: Daemon.cpp  Daemon.h  DaemonDex.cpp  DaemonDex.h  Entity.cpp  Entity.h  EventFlags.cpp  EventFlags.h  Inventory.cpp  Inventory.h  Map.cpp  Map.h  Movement.cpp  Movement.h  NPC.cpp  NPC.h  Party.cpp  Party.h  Player.cpp  Player.h  WalkAnimation.cpp  WalkAnimation.h  World.cpp  World.h
src/story/: StoryAction.h  StoryManager.cpp  StoryManager.h
src/ui/: GameUI.cpp  GameUI.h  InputManager.cpp  InputManager.h  Menu.h  OverworldRenderer.cpp  OverworldRenderer.h  Renderer.cpp  Renderer.h  SpriteFont.cpp  SpriteFont.h  UiConstants.h
src/world/: Creature.cpp  Creature.h  Daemon.cpp  Entity.cpp  Entity.h  Map.cpp  Map.h  NPC.cpp  NPC.h  Player.cpp  Player.h  World.cpp
subprojects/: sdl2_mixer.wrap
subprojects/animationwindow/: meson.build
subprojects/animationwindow/include/: AnimationWindow.h
subprojects/animationwindow/src/: AnimationWindow.cpp
subprojects/animationwindow/src/internal/: FontCache.cpp
subprojects/packagefiles/: sdl2_mixer-enable-mp3.patch
subprojects/std_lib_facilities/: meson.build
tests/: BattleAITest.cpp  BattleAnimationUtilsTest.cpp  BattleCaptureTest.cpp  BattleEventQueueTest.cpp  BattleFlowTest.cpp  BattlePresentationStateTest.cpp  BattleRulesTest.cpp  BattleTurnResolverTest.cpp  CutsceneFormatTest.cpp  CutsceneLoaderTest.cpp  CutscenePlaybackTest.cpp  CutsceneWorldOpsTest.cpp  DaemonExpTest.cpp  FilePathsTest.cpp  MapFormatTest.cpp  MapModelTest.cpp  ModeRequestTest.cpp  NPCDialogueFormatTest.cpp  SaveFormatTest.cpp  SaveManagerRoundTripTest.cpp  StarterSpeciesDataTest.cpp  StateModelTest.cpp  StoryActionTest.cpp  StringUtilsTest.cpp  TextParseTest.cpp  TrainerApproachCutsceneTest.cpp  WorldGenerateTest.cpp  WorldNpcOwnershipTest.cpp  WorldRespawnTest.cpp  check_docs.sh  check_tooling.sh
tests/common/: FilePathsTest.cpp  StringUtilsTest.cpp  TextParseTest.cpp
tests/cutscene/: CutsceneFormatTest.cpp  CutsceneLoaderTest.cpp  CutscenePlaybackTest.cpp  CutsceneWorldOpsTest.cpp
tests/story/: StoryActionTest.cpp
tools/: balance_report.py  content_tools.py  cutscene_editor.py  dev_workbench.py  dialogue_browser.py  lint_content.py  make_map.py  make_spritesheet.py  map_editor.py  new_content.py  optimize_audio.py  optimize_png.py  optimize_sfx_wav.py  validate_cutscene.py
web/: shell.html
(+114 files in other folders)
