[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daemon-map-tools"
version = "0.1.0"
description = "Python tooling for authoring maps and NPC sprite sheets in the Daemon game project."
requires-python = ">=3.12"
dependencies = [
  "pyside6>=6.8.0",
  "pillow>=10.0.0",
]

[project.scripts]
cutscene-editor = "cutscene_editor:main"
dev-workbench = "dev_workbench:main"
map-editor = "map_editor:main"
make-map = "make_map:main"
make-spritesheet = "make_spritesheet:main"
optimize-png = "optimize_png:main"
optimize-audio = "optimize_audio:main"
optimize-sfx = "optimize_sfx_wav:main"
lint-content = "lint_content:main"
validate-cutscene = "validate_cutscene:main"
dialogue-browser = "dialogue_browser:main"
new-content = "new_content:main"
balance-report = "balance_report:main"

[tool.setuptools]
package-dir = {"" = "tools"}
py-modules = ["cutscene_editor", "dev_workbench", "map_editor", "make_map", "make_spritesheet", "optimize_png", "optimize_audio", "optimize_sfx_wav", "content_tools", "lint_content", "validate_cutscene", "dialogue_browser", "new_content", "balance_report"]
